# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
ohos_static_library("libminui") {
  sources = [
    "src/animation_label.cpp",
    "src/frame.cpp",
    "src/surface_dev.cpp",
    "src/text_label.cpp",
    "src/updater_ui.cpp",
    "src/view.cpp",
  ]

  include_dirs = [
    "//third_party/libpng",
    "//third_party/libdrm/include/drm",
    "//third_party/libdrm",
    "//drivers/framework/ability/sbuf/include",
    "//drivers/framework/include/platform",
    "//drivers/framework/include/core",
    "//drivers/framework/include/osal",
    "//drivers/framework/include/utils",
    "//drivers/framework/include/config",
    "//drivers/framework/include",
    "//drivers/adapter/uhdf2/hdi",
    "//drivers/adapter/uhdf2/osal/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//drivers/peripheral/input/hal/include",
    "//drivers/peripheral/input/interfaces/include",
    "//base/update/updater/utils/include",
    "//base/update/updater/services",
    "//base/update/updater/interfaces/kits/include",
    "//base/powermgr/battery_manager/hdi/service/include",
    "//base/powermgr/battery_manager/hdi/api/include",
    "//drivers/framework/core/common/include/host",
    "//third_party/jsoncpp/include",
    "//base/powermgr/battery_manager/charger/vibrate",
    "//base/powermgr/battery_manager/charger/backlight",
    "//base/powermgr/battery_manager/charger/led",
    "//base/powermgr/battery_manager/charger/include",
    "//base/powermgr/battery_manager/charger/ui/include",
  ]

  deps = [
    "//base/update/updater/interfaces/kits/packages:libpackageExt",
    "//base/update/updater/services/log:libupdaterlog",
    "//base/update/updater/utils:libutils",
    "//drivers/peripheral/input/hal:hdi_input",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/libdrm:libdrm",
    "//third_party/libpng:libpng",
  ]

  subsystem_name = "powermgr"
  part_name = "battery_manager_native"
}
