# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_manager/batterymgr.gni")

config("batterysrv_public_config") {
  include_dirs = [
    "native/include",
    "${battery_service_zidl}/include",
  ]
}

ohos_shared_library("batterysrv_client") {
  sources = [
    "${battery_frameworks}/native/src/battery_srv_client.cpp",
    "${battery_service_zidl}/src/battery_srv_proxy.cpp",
  ]

  configs = [ "${battery_utils}:utils_config" ]

  public_configs = [ ":batterysrv_public_config" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  install_images = [ system_base_dir ]
  relative_install_dir = "platformsdk"

  part_name = "battery_manager"
}
