# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../batterymgr.gni")

config("batterysrv_public_config") {
  include_dirs = [
    "include",
    "${battery_inner_api}/native/include",
  ]
}

ohos_shared_library("batterysrv_stub") {
  sources = [ "${battery_service_zidl}/src/battery_srv_stub.cpp" ]

  configs = [
    "${battery_utils}:utils_config",
    ":batterysrv_public_config",
    "${battery_utils}:coverage_flags",
  ]

  external_deps = [
    "c_utils:utils",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "powermgr"
  part_name = "battery_manager"
}
