# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "getbatterytemperature_fuzzer:GetBatteryTemperatureFuzzTest",
    "getcapacity_fuzzer:GetCapacityFuzzTest",
    "getcapacitylevel_fuzzer:GetCapacityLevelFuzzTest",
    "getchargingstatus_fuzzer:GetChargingStatusFuzzTest",
    "getcurrentaverage_fuzzer:GetCurrentAverageFuzzTest",
    "gethealthstatus_fuzzer:GetHealthStatusFuzzTest",
    "getnowcurrent_fuzzer:GetNowCurrentFuzzTest",
    "getpluggedtype_fuzzer:GetPluggedTypeFuzzTest",
    "getpresent_fuzzer:GetPresentFuzzTest",
    "getremainenergy_fuzzer:GetRemainEnergyFuzzTest",
    "getremainingchargetime_fuzzer:GetRemainingChargeTimeFuzzTest",
    "gettechnology_fuzzer:GetTechnologyFuzzTest",
    "gettotalenergy_fuzzer:GetTotalEnergyFuzzTest",
    "getvoltage_fuzzer:GetVoltageFuzzTest",
  ]
}
